Fixed horizontal scroll on tablet and mobile view

--- a/css/our-services.css
+++ b/css/our-services.css
@@ -5,6 +5,7 @@
     align-items: center;
     row-gap: 30px;
     padding: 0 10%;
+    overflow: hidden;
 }
 
 #our-services>h2,
